--- a/ClientApp/src/app/products/products.component.html
+++ b/ClientApp/src/app/products/products.component.html
@@ -1,24 +1,5 @@
-<h1>Listado de Productos</h1>
-<div class="row">
-    <input class="form-control" [(ngModel)]="campobuscado" name="campobuscado">
-    <button class="btn btn-success" (click)="BuscarJugador()">Buscar</button>
-</div>
-<table class="table table-stripe" *ngIf="(ListadoProductos.length>0)">
-    <thead class="thead-dark">
-        <tr>
-            <th>ID </th>
-            <th>SKU</th>
-            <th>Nombre </th>
-            <th>Imagen </th>
-            <th>Precio </th>
-        </tr>
-    </thead>
-    <tr *ngFor="let producto of ListadoProductos">
-        <td>{{producto.id}}</td>
-        <td>{{producto.sku}}</td>
-        <td>{{producto.nombre}}</td>
-        <td>{{producto.imagen}}</td>
-        <td>{{producto.precio}}</td>
-
-    </tr>
-</table>
+<ul>
+    <li *ngFor="let product of ProductList | ObjToArray">
+        {{product.product_id}}{{product.sku}} {{product.name}} {{product.image}} {{product.price}}
+    </li>
+</ul>
