--- a/ClientApp/src/app/products/products.component.html
+++ b/ClientApp/src/app/products/products.component.html
@@ -1,5 +1,51 @@
-<ul>
-    <li *ngFor="let product of ProductList | ObjToArray">
-        {{product.product_id}}{{product.sku}} {{product.name}} {{product.image}} {{product.price}}
-    </li>
-</ul>
+<!-- SEARCH BAR -->
+<div class="col-md-6">
+    <div class="header-search">
+        <form>
+            <select class="input-select" (click)="getByCategory(option.value)" #option>
+          <option value="0">Categorias</option>
+          <option value="1">Televisores</option>
+          <option value="2">Laptops</option>
+          <option value="3">Celulares</option>
+          </select>
+            <input class="input" placeholder="Busque el producto" [(ngModel)]="campobuscado" name="campobuscado">
+            <button class="search-btn" (click)="serchByName(campobuscado)">Buscar</button>
+        </form>
+    </div>
+</div>
+<!-- /SEARCH BAR -->
+
+
+<div class="col-md-12">
+    <div class="row">
+        <div class="col-md-4 col-sm-6" *ngFor="let p of ProductList">
+            <div class="card my-2">
+                <img [src]="p.image" alt="{{p.name}}" width="200px" height="400px" class="card-img-top" [routerLink]='["/productos-cards/" + p.product_id]' style="cursor:pointer;">
+                <div class="card-header">
+                    <div class="card-title">
+                        <p>{{p.name | titlecase}}</p>
+
+                    </div>
+                </div>
+                <div class="card-body">
+
+                    <p class="lead">{{p.price | currency:'USD'}}</p>
+                </div>
+
+                <div class="row d-flex justify-content-center border-primary my-3">
+                    <div class="col-md-6 ">
+                    </div>
+                </div>
+                <button class="btn btn-outline-primary btn-sm btn-block" [class.disabled]="p.quantity < 1" [class.btn-outline-danger]="p.quantity < 1" (click)="AddProduct(p.id)" [disabled]="p.quantity < 1">
+          {{ p.quantity < 1 ? "NO STOCK" : "Agregar al carrito"}}
+        </button>
+                <button class="btn btn-primary btn-sm btn-block" [class.disabled]="p.quantity < 1" [class.btn-outline-danger]="p.quantity < 1" (click)="AddProduct(p.id)" [disabled]="p.quantity < 1">
+            {{ p.quantity < 1 ? "NO STOCK" : "Comprar"}}
+          </button>
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
