--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -12,7 +12,7 @@
                     </div>
                     <div class="shop-body">
                         <h3>Televisores<br></h3>
-                        <a [routerLink]='["/productos/"]' onclick=" getByCategoryHome(option.value)" value="1" class="cta-btn">Comprar ahora <i class="fa fa-arrow-circle-right"></i></a>
+                        <a [routerLink]='["/productos/tvs"]' onclick=" getByCategoryHome(option.value)" value="1" class="cta-btn">Comprar ahora <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -24,7 +24,7 @@
                     </div>
                     <div class="shop-body">
                         <h3>Laptops<br></h3>
-                        <a href="http://localhost:4200/productos" value="2" class="cta-btn">Comprar ahora <i class="fa fa-arrow-circle-right"></i></a>
+                        <a href="http://localhost:4200/productos/laptops" value="2" class="cta-btn">Comprar ahora <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                     </div>
                     <div class="shop-body">
                         <h3>Celulares<br></h3>
-                        <a href="http://localhost:4200/productos" value="3" class="cta-btn">Comprar ahora <i class="fa fa-arrow-circle-right"></i></a>
+                        <a href="http://localhost:4200/productos/celulares" value="3" class="cta-btn">Comprar ahora <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
             </div>
