--- a/ClientApp/src/app/products/cards/cards.component.html
+++ b/ClientApp/src/app/products/cards/cards.component.html
@@ -9,8 +9,8 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">All Categories</a></li>
                     <li><a href="#">Accessories</a></li>
-                    <li><a href="#">{{product.category}}</a></li>
-                    <li class="active">{{product.name}}</li>
+                    <li><a href="#">{{product?.category}}</a></li>
+                    <li class="active">{{product?.name}}</li>
                 </ul>
             </div>
         </div>
@@ -30,7 +30,7 @@
             <div class="col-md-5 col-md-push-2">
                 <div id="product-main-img">
                     <div class="product-preview">
-                        <img [src]="product.image" alt="">
+                        <img [src]="product?.image" alt="">
                     </div>
                 </div>
             </div>
@@ -38,7 +38,8 @@
             <!-- Product details -->
             <div class="col-md-5">
                 <div class="product-details">
-                    <h2 class="product-name">{{product?.name}}</h2>
+                    <h2 class="product-name" id="product-description">{{product?.name}}</h2>
+                    <p class="product-sku">SKU: {{product?.sku}}</p>
                     <div>
                         <div class="product-rating">
                             <i class="fa fa-star"></i>
@@ -50,9 +51,9 @@
                         <a class="review-link" href="#">10 Review(s) | Add your review</a>
                     </div>
                     <div>
-                        <h3 class="product-price">{{product?.price | currency:'USD'}} </h3>
-                        <span class="product-available" *ngIf="product.quantity > 0 ">Hay Stock</span>
-                        <span class="product-available" *ngIf="!(product.quantity > 0) ">No hay Stock</span>
+                        <h3 class="product-price" id="unit-price">{{product?.price | currency:'USD'}} </h3>
+                        <span class="product-available" *ngIf="(product?.quantity > 0)">Hay Stock</span>
+                        <span class="product-available" *ngIf="!(product?.quantity > 0) ">No hay Stock</span>
                     </div>
                     <p>{{product?.description}}</p>
 
@@ -66,15 +67,16 @@
                                 <span (click)="Decrease()" class="qty-down">-</span>
                             </div>
                         </div>
-                        <button (click)="addToCart(product?.id)" *ngIf="product?.quantity >= 1" class="add-to-cart-btn"><i
-                class="fa fa-shopping-cart"></i>Agregar al carrito
-              </button>
+
                     </div>
 
-                    <ul class="product-links">
-                        <li>Categoria:</li>
-                        <li><a href="#">{{product?.category}}</a></li>
-                    </ul>
+                    <form action="/procesar-pago" method="POST">
+                        <button type="button" (click)="onBuy()" class="mercadopago-button btn-sm btn-block" id="mercadopago-button">
+                         COMPRAR
+                        </button>
+                    </form>
+                    <button class="btn btn-warning btn-block" (click)=addtocart(product)>Add to cart</button>
+
 
                     <ul class="product-links">
                         <li>Share:</li>
@@ -89,14 +91,14 @@
             <!-- /Product details -->
 
             <!-- Product tab -->
-            <div class="col-md-12">
+            <!--<div class="col-md-12">
                 <div id="product-tab">
-                    <!-- product tab nav -->
+                    //product tab nav 
                     <ul class="tab-nav" role="tablist">
                         <li class="active" role="presentation"><a data-toggle="tab" href="#tab1" role="tab">Description</a></li>
                     </ul>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
