--- a/ClientApp/src/app/products/cards/cards.component.html
+++ b/ClientApp/src/app/products/cards/cards.component.html
@@ -1,104 +1,65 @@
-<!-- BREADCRUMB -->
-<div class="section" id="breadcrumb">
-    <!-- container -->
-    <div class="container">
-        <!-- row -->
-        <div class="row">
-            <div class="col-md-12">
-                <ul class="breadcrumb-tree">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">All Categories</a></li>
-                    <li><a href="#">Accessories</a></li>
-                    <li><a href="#">{{product?.category}}</a></li>
-                    <li class="active">{{product?.name}}</li>
-                </ul>
+<div class="body">
+
+    <div class="col-md-5 col-md-push-2">
+        <div id="product-main-img">
+            <div class="product-preview">
+                <img class="imagen" [src]="product?.image" alt="">
             </div>
         </div>
-        <!-- /row -->
     </div>
-    <!-- /container -->
-</div>
-<!-- /BREADCRUMB -->
-
-<!-- SECTION -->
-<div class="section">
-    <!-- container -->
-    <div class="container">
-        <!-- row -->
-        <div class="row d-flex">
-            <!-- Product main img -->
-            <div class="col-md-5 col-md-push-2">
-                <div id="product-main-img">
-                    <div class="product-preview">
-                        <img [src]="product?.image" alt="">
-                    </div>
+    <!-- /Product main img -->
+    <!-- Product details -->
+    <div class="col-md-5">
+        <div class="product-details">
+            <h2 class="product-name" id="name">{{product?.name}}</h2>
+            <p class="product-sku" id="sku">SKU: {{product?.sku}}</p>
+            <div>
+                <div class="product-rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
                 </div>
+                <a class="review-link" href="#">10 Review(s) | Add your review</a>
             </div>
-            <!-- /Product main img -->
-            <!-- Product details -->
-            <div class="col-md-5">
-                <div class="product-details">
-                    <h2 class="product-name" id="product-description">{{product?.name}}</h2>
-                    <p class="product-sku">SKU: {{product?.sku}}</p>
-                    <div>
-                        <div class="product-rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star-o"></i>
-                        </div>
-                        <a class="review-link" href="#">10 Review(s) | Add your review</a>
-                    </div>
-                    <div>
-                        <h3 class="product-price" id="unit-price">{{product?.price | currency:'USD'}} </h3>
-                        <span class="product-available" *ngIf="(product?.quantity > 0)">Hay Stock</span>
-                        <span class="product-available" *ngIf="!(product?.quantity > 0) ">No hay Stock</span>
-                    </div>
-                    <p>{{product?.description}}</p>
-
-
-                    <div class="add-to-cart">
-                        <div class="qty-label">
-                            Cantidad de Unidades
-                            <div class="input-number">
-                                <input #quantity [max]="product?.quantity" [min]="product?.quantity >= 1 ? product?.quantity : 0" readonly type="number" value="{{product?.quantity >= 1 ? 1 : 0}}">
-                                <span (click)="Increase()" class="qty-up">+</span>
-                                <span (click)="Decrease()" class="qty-down">-</span>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <form action="/procesar-pago" method="POST">
-                        <button type="button" (click)="onBuy()" class="mercadopago-button btn-sm btn-block" id="mercadopago-button">
-                         COMPRAR
-                        </button>
-                    </form>
-                    <button class="btn btn-warning btn-block" (click)=addtocart(product)>Add to cart</button>
-
-
-                    <ul class="product-links">
-                        <li>Share:</li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#"><i class="fa fa-envelope"></i></a></li>
-                    </ul>
-
-                </div>
+            <div>
+                <h3 class="product-price" id="unit-price">{{product?.price | currency:'USD'}} </h3>
+                <span class="product-available" id="quantity" *ngIf="(product?.quantity > 0)">Hay Stock</span>
+                <span class="product-available" *ngIf="!(product?.quantity > 0) ">No hay Stock</span>
             </div>
-            <!-- /Product details -->
+            <p>{{product?.description}}</p>
 
-            <!-- Product tab -->
-            <!--<div class="col-md-12">
-                <div id="product-tab">
-                    //product tab nav 
-                    <ul class="tab-nav" role="tablist">
-                        <li class="active" role="presentation"><a data-toggle="tab" href="#tab1" role="tab">Description</a></li>
-                    </ul>
+
+            <div class="add-to-cart">
+                <div class="qty-label">
+                    Cantidad de Unidades
+                    <div class="input-number">
+                        <input #quantity [max]="product?.quantity" [min]="product?.quantity >= 1 ? product?.quantity : 0" readonly type="number" value="{{product?.quantity >= 1 ? 1 : 0}}">
+                        <span (click)="Increase()" class="qty-up">+</span>
+                        <span (click)="Decrease()" class="qty-down">-</span>
+                    </div>
                 </div>
-            </div>-->
+
+            </div>
+
+            <form action="/procesar-pago" method="POST">
+                <button type="button" onclick="OnBuy()" class="mercadopago-button btn-sm btn-block" id="mercadopago-button">
+             COMPRAR
+            </button>
+            </form>
+
+            <button class="btn btn-warning btn-block" (click)=addtocart(product)>Add to cart</button>
+
+
+            <ul class="product-links">
+                <li>Share:</li>
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+            </ul>
+
         </div>
     </div>
 </div>
