--- a/ClientApp/src/app/products/products.component.html
+++ b/ClientApp/src/app/products/products.component.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-md-4 col-sm-3" *ngFor="let p of ProductList">
                 <div class="card my-2">
-                    <img [src]="p.image" alt="{{p.name}}" width="150px" height="250px" class="card-img-top" [routerLink]='["/productos-cards/" + p.product_id]' style="cursor:pointer;">
+                    <img [src]="p.image" alt="{{p.name}}" width=auto height=auto class="card-img-top" [routerLink]='["/productos-cards/" + p.product_id]' style="cursor:pointer;">
                     <div class="card-header">
                         <div class="card-title">
                             <p>{{p.name | titlecase}}</p>
