mp casi terminado falta unit price y quantity

--- a/ClientApp/src/app/products/cards/cards.component.html
+++ b/ClientApp/src/app/products/cards/cards.component.html
@@ -44,7 +44,7 @@
             </div>
 
             <form action="/procesar-pago" method="POST">
-                <button type="button" onclick="OnBuy()" class="mercadopago-button btn-sm btn-block" id="mercadopago-button">
+                <button type="button" class="mercadopago-button btn-sm btn-block" id="mercadopago-button">
              COMPRAR
             </button>
             </form>
