--- a/ClientApp/src/app/header/header.component.html
+++ b/ClientApp/src/app/header/header.component.html
@@ -12,7 +12,7 @@
             </ul>
             <ul class="header-links pull-right">
                 <li><a href="http://localhost:4200/cart"><i class="fa fa-shopping-cart"></i> Carrito</a></li>
-                <li><a href="#"><i class="fa fa-user-o"></i> Ingresar</a></li>
+                <li><a href="http://localhost:4200/login"><i class="fa fa-user-o"></i> Ingresar</a></li>
             </ul>
         </div>
     </div>
