--- a/ClientApp/src/app/cart/cart.component.html
+++ b/ClientApp/src/app/cart/cart.component.html
@@ -1,1 +1,69 @@
-<p>cart work</p>
+<div class="pb-5">
+    <div class="container">
+        <div class="row" *ngIf="cart.length > 0">
+            <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
+
+                <div class="card shopping-cart">
+
+                    <div class="card-body">
+                        <!-- PRODUCT -->
+                        <div class="row" *ngFor="let product of cart">
+                            <div class="col-12 col-sm-12 col-md-2 text-center">
+                                <img class="img-responsive" [src]="product?.image" height="80">
+                            </div>
+                            <div class="col-12 text-sm-center col-sm-12 text-md-left col-md-5">
+                                <h2 class="product-name" id="name">{{product?.name}}</h2>
+                                <p class="product-sku" id="sku" style="visibility: hidden">SKU: {{product?.sku}}</p>
+                            </div>
+                            <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row">
+                                <div class="col-3 col-sm-3 col-md-6 text-md-right" style="padding-top: 5px">
+                                    <div class="price-wrap">
+                                        <var class="price">{{(product.price * product.quantity)}}</var>
+                                        <small class="text-muted">({{product.price}} x producto)</small>
+                                    </div>
+                                </div>
+                                <div class="col-4 col-sm-4 col-md-4">
+                                    <div class="quantity">
+                                        <input type="button" value="+" class="plus" (click)="onUpdateQuantity(1,  product.product_id)">
+                                        <input type="number" step="1" max="99" min="1" [value]="product?.quantity" title="Qty" class="qty" size="4">
+                                        <input type="button" value="-" class="minus" [disabled]="product.quantity == 1" (click)="onUpdateQuantity(0, product.product_id)">
+                                    </div>
+                                </div>
+                                <div class="col-2 col-sm-2 col-md-2 text-right">
+                                    <button type="button" class="btn btn-outline-danger btn-xs" (click)="onRemoveProductsFromCart(product.product_id)">
+                                            <i class="fa fa-trash" aria-hidden="true"></i>
+                                        </button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- END PRODUCT -->
+                    </div>
+                    <div class="card-footer">
+
+                        <div class="float-right" style="margin: 10px">
+                            <div class="float-left" id="price" value="total?" style="margin: 17px">
+                                Total price: <b>${{total}}</b>
+                            </div>
+                            <button type="button" class="mercadopago-button btn-sm btn-block" id="mercadopago-button">
+                                COMPRAR
+                               </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row" *ngIf="cart.length == 0">
+            <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
+                <div class="jumbotron text-xs-center">
+                    <h1 class="display-3">Oops!</h1>
+                    <p class="lead">Todavia no tiene productos</p>
+                    <hr>
+                    <p class="lead">
+                        <a class="btn btn-success " [routerLink]="['/']" role="button">Nuestros Productos</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End -->
