--- a/ClientApp/src/app/products/cards/cards.component.html
+++ b/ClientApp/src/app/products/cards/cards.component.html
@@ -31,17 +31,6 @@
             <p>{{product?.description}}</p>
 
 
-            <div class="add-to-cart">
-                <div class="qty-label">
-                    Cantidad de Unidades
-                    <div class="input-number">
-                        <input #quantity [max]="product?.quantity" [min]="product?.quantity >= 1 ? product?.quantity : 0" readonly type="number" value="{{product?.quantity >= 1 ? 1 : 0}}">
-                        <span (click)="Increase()" class="qty-up">+</span>
-                        <span (click)="Decrease()" class="qty-down">-</span>
-                    </div>
-                </div>
-
-            </div>
 
             <form action="/procesar-pago" method="POST">
                 <button type="button" class="mercadopago-button btn-sm btn-block" id="mercadopago-button">
@@ -49,7 +38,9 @@
             </button>
             </form>
 
-            <button class="btn btn-warning btn-block" (click)=addtocart(product)>Add to cart</button>
+            <button (click)="addToCart(product?.id)" *ngIf="product?.quantity >= 1" class="add-to-cart-btn"><i
+                class="fa fa-shopping-cart"></i>Add To Cart
+              </button>
 
 
             <ul class="product-links">
@@ -62,4 +53,3 @@
 
         </div>
     </div>
-</div>
