--- a/ClientApp/src/app/products/cards/cards.component.html
+++ b/ClientApp/src/app/products/cards/cards.component.html
@@ -1,3 +1,9 @@
+<div *ngIf="alert" class="alert alert-success alert-dismissible fade show" role="alert">
+    <strong>Producto {{product?.name}} </strong> agregado al carrito.
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+</div>
 <div class="body">
 
     <div class="col-md-5 col-md-push-2">
@@ -24,7 +30,7 @@
                 <a class="review-link" href="#">10 Review(s) | Add your review</a>
             </div>
             <div>
-                <h3 class="product-price" id="unit-price">{{product?.price | currency:'USD'}} </h3>
+                <h3 class="product-price" id="unit_price">{{product?.price | currency:'USD'}} </h3>
                 <span class="product-available" id="quantity" *ngIf="(product?.quantity > 0)">Hay Stock</span>
                 <span class="product-available" *ngIf="!(product?.quantity > 0) ">No hay Stock</span>
             </div>
@@ -38,7 +44,8 @@
             </button>
             </form>
 
-            <button (click)="addToCart(product?.id)" *ngIf="product?.quantity >= 1" class="add-to-cart-btn"><i
+
+            <button (click)="addToCart(product?.id)" *ngIf="product?.quantity >= 1" class="add-to-cart-btn-danger btn-sm btn-block"><i
                 class="fa fa-shopping-cart"></i>Add To Cart
               </button>
 
