--- a/ClientApp/src/app/cart/cart.component.html
+++ b/ClientApp/src/app/cart/cart.component.html
@@ -12,7 +12,7 @@
                                 <img class="img-responsive" [src]="product?.image" height="80">
                             </div>
                             <div class="col-12 text-sm-center col-sm-12 text-md-left col-md-5">
-                                <h2 class="product-name" id="name">{{product?.name}}</h2>
+                                <h2 class="product-name">{{product?.name}}</h2>
                                 <p class="product-sku" id="sku" style="visibility: hidden">SKU: {{product?.sku}}</p>
                             </div>
                             <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row">
@@ -30,7 +30,7 @@
                                     </div>
                                 </div>
                                 <div class="col-2 col-sm-2 col-md-2 text-right">
-                                    <button type="button" class="btn btn-outline-danger btn-xs" (click)="onRemoveProductsFromCart(product.product_id)">
+                                    <button type="button" class="btn btn-outline-danger btn-xs" (click)="deleteMethod(product.product_id)">
                                             <i class="fa fa-trash" aria-hidden="true"></i>
                                         </button>
                                 </div>
@@ -42,7 +42,10 @@
 
                         <div class="float-right" style="margin: 10px">
                             <div class="float-left" id="price" value="total?" style="margin: 17px">
-                                Total price: <b>${{total}}</b>
+                                Total price: <span id="unit-price">{{total}}</span>
+                            </div>
+                            <div class="float-left" style="margin: 17px">
+                                <span id="name" style="visibility: hidden">JCommerce</span>
                             </div>
                             <button type="button" class="mercadopago-button btn-sm btn-block" id="mercadopago-button">
                                 COMPRAR
@@ -59,7 +62,7 @@
                     <p class="lead">Todavia no tiene productos</p>
                     <hr>
                     <p class="lead">
-                        <a class="btn btn-success " [routerLink]="['/']" role="button">Nuestros Productos</a>
+                        <a class="btn btn-success " [routerLink]="['/productos']" role="button">Nuestros Productos</a>
                     </p>
                 </div>
             </div>
