--- a/ClientApp/src/app/products/cards/cards.component.html
+++ b/ClientApp/src/app/products/cards/cards.component.html
@@ -30,25 +30,21 @@
                 <a class="review-link" href="#">10 Review(s) | Add your review</a>
             </div>
             <div>
-                <h3 class="product-price" id="unit_price">{{product?.price | currency:'USD'}} </h3>
+                <b>Price:</b> $ <span id="unit-price">{{product?.price}}</span>
                 <span class="product-available" id="quantity" *ngIf="(product?.quantity > 0)">Hay Stock</span>
                 <span class="product-available" *ngIf="!(product?.quantity > 0) ">No hay Stock</span>
             </div>
             <p>{{product?.description}}</p>
 
+            <button type="button" class="mercadopago-button btn-sm btn-block" id="mercadopago-button">
+                COMPRAR
+               </button>
 
-
-            <form action="/procesar-pago" method="POST">
-                <button type="button" class="mercadopago-button btn-sm btn-block" id="mercadopago-button">
-             COMPRAR
-            </button>
-            </form>
-
-
-            <button (click)="addToCart(product?.id)" *ngIf="product?.quantity >= 1" class="add-to-cart-btn-danger btn-sm btn-block"><i
+            <button (click)="addToCart(product?.id)" *ngIf="product?.quantity >= 1" class="btn-danger btn-sm btn-block"><i
                 class="fa fa-shopping-cart"></i>Add To Cart
-              </button>
+            </button>
 
+            <button class="btn-warning btn-sm btn-block" [routerLink]='["/productos"]'>Volver </button>
 
             <ul class="product-links">
                 <li>Share:</li>
@@ -57,6 +53,7 @@
                 <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                 <li><a href="#"><i class="fa fa-envelope"></i></a></li>
             </ul>
+
 
         </div>
     </div>
