--- a/ClientApp/src/app/products/products.component.html
+++ b/ClientApp/src/app/products/products.component.html
@@ -36,13 +36,10 @@
 
                     <div>
                         <div>
-
-                            <button class="btn btn-outline-primary btn-sm btn-block" [class.disabled]="p.quantity < 1" [class.btn-outline-danger]="p.quantity < 1" (click)="AddProduct(p.id)" [disabled]="p.quantity < 1">
-                                {{ p.quantity < 1 ? "NO STOCK" : "Agregar al carrito"}}
-                            </button>
                             <form action="/procesar-pago" method="POST">
-                                <button type="button" [routerLink]='["/productos-cards/" + p.product_id]' class="mercadopago-button btn-sm btn-block" id="mercadopago-button">
-                                 COMPRAR
+                                <button type="button" [routerLink]='["/productos-cards/" + p.product_id]' class="mercadopago-button btn-sm btn-block" id="mercadopago-button" [class.disabled]="p.quantity < 1" [class.btn-outline-danger]="p.quantity < 1" (click)="addToCart(product?.id)"
+                                    [disabled]="p.quantity < 1">
+                                    {{ p.quantity < 1 ? "NO STOCK" : "Ver Producto"}}
                                 </button>
                             </form>
                         </div>
