--- a/ClientApp/src/app/login/login.component.html
+++ b/ClientApp/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-12 text-center">
         <div id="LoginScreen">
-            <button id="login">Login with Google</button>
+            <button id="login" (click)="onLoginGoogle()">Login with Google</button>
         </div>
 
         <div id="dashboard">
