--- a/ClientApp/src/app/cart/cart.component.html
+++ b/ClientApp/src/app/cart/cart.component.html
@@ -25,7 +25,7 @@
                                 <div class="col-4 col-sm-4 col-md-4">
                                     <div class="quantity">
                                         <input type="button" value="+" class="plus" (click)="onUpdateQuantity(1,  product.product_id)">
-                                        <input type="number" step="1" max="99" min="1" [value]="product?.quantity" title="Qty" class="qty" size="4">
+                                        <input type="number" id="quantity" step="1" max="99" min="1" [value]="product?.quantity" title="Qty" class="qty" size="4">
                                         <input type="button" value="-" class="minus" [disabled]="product.quantity == 1" (click)="onUpdateQuantity(0, product.product_id)">
                                     </div>
                                 </div>
@@ -41,15 +41,17 @@
                     <div class="card-footer">
 
                         <div class="float-right" style="margin: 10px">
+
                             <div class="float-left" id="price" value="total?" style="margin: 17px">
                                 Total price: <span id="unit-price">{{total}}</span>
                             </div>
-                            <div class="float-left" style="margin: 17px">
-                                <span id="name" style="visibility: hidden">JCommerce</span>
+                            <div class="float-left" style="margin: 17px" id="name" *ngFor="let product of cart">
+                                <span style="visibility: hidden">Jcommerce</span>
                             </div>
-                            <button type="button" class="mercadopago-button btn-sm btn-block" id="mercadopago-button">
+                            <button type="button" class="mercadopago-button btn btn-primary btn-sm btn-block" id="mercadopago-button">
                                 COMPRAR
                                </button>
+                            <a class="btn btn-warning btn-sm btn-block" [routerLink]="['/productos']" role="button">Seguir Comprando</a>
                         </div>
                     </div>
                 </div>
@@ -58,11 +60,10 @@
         <div class="row" *ngIf="cart.length == 0">
             <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
                 <div class="jumbotron text-xs-center">
-                    <h1 class="display-3">Oops!</h1>
-                    <p class="lead">Todavia no tiene productos</p>
+                    <h1 class="display-3">Todavia no tiene productos</h1>
                     <hr>
                     <p class="lead">
-                        <a class="btn btn-success " [routerLink]="['/productos']" role="button">Nuestros Productos</a>
+                        <a class="btn btn-warning btn-lg btn-block" [routerLink]="['/productos']" role="button">Nuestros Productos</a>
                     </p>
                 </div>
             </div>
