--- a/ClientApp/src/app/products/cards/cards.component.html
+++ b/ClientApp/src/app/products/cards/cards.component.html
@@ -18,7 +18,6 @@
     <div class="col-md-5">
         <div class="product-details">
             <h2 class="product-name" id="name">{{product?.name}}</h2>
-            <p class="product-sku" id="sku">SKU: {{product?.sku}}</p>
             <div>
                 <div class="product-rating">
                     <i class="fa fa-star"></i>
@@ -27,21 +26,21 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <a class="review-link" href="#">10 Review(s) | Add your review</a>
+                <a class="review-link" href="#">10 Reseñas(s)</a>
             </div>
             <div>
-                <b>Price:</b> $ <span id="unit-price">{{product?.price}}</span>
-                <span class="product-available" id="quantity" *ngIf="(product?.quantity > 0)">Hay Stock</span>
+                <b>Precio:</b> $ <span id="unit-price">{{product?.price}}</span>
+                <span class="product-available" id="qt" *ngIf="(product?.quantity > 0)">Hay Stock</span>
                 <span class="product-available" *ngIf="!(product?.quantity > 0) ">No hay Stock</span>
             </div>
             <p>{{product?.description}}</p>
+            <p class="product-sku" style="visibility: hidden;" id="sku">SKU: {{product?.sku}}</p>
+            <input type="number" id="quantity" [value]="1" style="visibility: hidden;">
 
-            <button type="button" class="mercadopago-button btn-sm btn-block" id="mercadopago-button">
-                COMPRAR
-               </button>
-
+            <button *ngIf="product?.quantity>= 1" type="button" class="mercadopago-button btn btn-primary btn-sm btn-block" id="mercadopago-button"> COMPRAR
+                </button>
             <button (click)="addToCart(product?.id)" *ngIf="product?.quantity >= 1" class="btn-danger btn-sm btn-block"><i
-                class="fa fa-shopping-cart"></i>Add To Cart
+                class="fa fa-shopping-cart"></i>Agregar al carrito
             </button>
 
             <button class="btn-warning btn-sm btn-block" [routerLink]='["/productos"]'>Volver </button>
