--- a/ClientApp/src/app/login/login.component.html
+++ b/ClientApp/src/app/login/login.component.html
@@ -3,6 +3,9 @@
         <div id="LoginScreen">
             <button id="login" (click)="onLoginGoogle()">Login with Google</button>
         </div>
+        <div id="boproductos">
+            <button class="btn btn-primary" [routerLink]='["/boproductos"]'>Ir al Back Office</button>
+        </div>
 
         <div id="dashboard">
             <div id="userDetails"></div>
