--- a/ClientApp/src/app/backoffice/formulario/formulario-productos/formulario-productos.component.html
+++ b/ClientApp/src/app/backoffice/formulario/formulario-productos/formulario-productos.component.html
@@ -52,5 +52,6 @@
         </div>
 
         <button type="submit" class="btn btn-danger">Guardar</button>
+        <button class="btn btn-primary" [routerLink]='["/boproductos"]'>vovler</button>
     </fieldset>
 </form>
