arregle carrito desde cards

--- a/ClientApp/src/app/cart/cart.component.html
+++ b/ClientApp/src/app/cart/cart.component.html
@@ -20,7 +20,7 @@
                                     <div class="price-wrap">
                                         <table>
                                             <tr>
-                                                <var class="price">{{(product.price * product.quantity)}}</var>
+                                                <var class="price">$ {{(product.price * product.quantity)}}</var>
                                             </tr>
                                             <tr>
                                                 <small class="text-muted">({{product.price}} x producto)</small>
