--- a/ClientApp/src/app/backoffice/crudproductos/crudproductos.component.html
+++ b/ClientApp/src/app/backoffice/crudproductos/crudproductos.component.html
@@ -2,8 +2,9 @@
 <p *ngIf="!(ProductList)">No hay Productos cargados</p>
 <div class="row">
     <input class="form-control" [(ngModel)]="campobuscado" name="campobuscado">
-    <button class="btn btn-success" (click)="FindProductById()">Buscar</button>
+    <button class="search-btn btn-danger" (click)="serchByName(campobuscado)">Buscar</button>
     <button class="btn btn-primary" [routerLink]='["/producto-nuevo/"]'>Crear</button>
+    <button class="btn btn-warning" (click)="CargarListado() ">Mostrar todos </button>
 </div>
 <table class="table table-stripe">
     <thead class="thead-dark">
