--- a/ClientApp/src/app/products/cards/confirm/confirm.component.html
+++ b/ClientApp/src/app/products/cards/confirm/confirm.component.html
@@ -18,7 +18,7 @@
                             <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row">
                                 <div class="col-3 col-sm-3 col-md-6 text-md-right" style="padding-top: 5px">
                                     <div class="price-wrap">
-                                        <var class="price">{{(product.price * product.quantity)}}</var>
+                                        <var class="price"> ${{(product.price * product.quantity)}}</var>
                                         <small class="text-muted">({{product.price}} x producto)</small>
                                     </div>
                                 </div>
